--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "build": "webpack",
+    "test": "test",
+    "lint": "tslint -c tslint.json 'src/**/*.ts'"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,20 @@
   "bugs": {
     "url": "https://github.com/alanmynah/react-typescript/issues"
   },
-  "homepage": "https://github.com/alanmynah/react-typescript#readme"
+  "homepage": "https://github.com/alanmynah/react-typescript#readme",
+  "dependencies": {
+    "@types/node": "^9.6.9",
+    "@types/react": "^16.3.13",
+    "@types/react-dom": "^16.0.5",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2"
+  },
+  "devDependencies": {
+    "awesome-typescript-loader": "^5.0.0",
+    "source-map-loader": "^0.2.3",
+    "tslint": "^5.9.1",
+    "typescript": "^2.8.3",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.1.2"
+  }
 }
