--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
+    "watch": "webpack --watch",
     "test": "test",
     "lint": "tslint -c tslint.json 'src/**/*.ts'"
   },
@@ -23,7 +24,9 @@
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "semantic-ui-css": "^2.3.0",
+    "semantic-ui-react": "^0.78.3"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^5.0.0",
