--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
     "@types/node": "^9.6.9",
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
+    "node-sass": "^4.9.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "sass-loader": "^7.0.1",
     "semantic-ui-react": "^0.78.3"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^5.0.0",
+    "css-loader": "^0.28.11",
     "source-map-loader": "^0.2.3",
+    "style-loader": "^0.21.0",
     "tslint": "^5.9.1",
     "typescript": "^2.8.3",
     "webpack": "^4.6.0",
