--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^9.6.9",
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
+    "lodash": "^4.17.10",
     "node-sass": "^4.9.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -30,6 +31,7 @@
     "semantic-ui-react": "^0.78.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.108",
     "awesome-typescript-loader": "^5.0.0",
     "css-loader": "^0.28.11",
     "source-map-loader": "^0.2.3",
