--- a/package.json
+++ b/package.json
@@ -25,14 +25,15 @@
     "semantic-ui-react": "^0.78.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.108",
     "@types/node": "^9.6.9",
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
-    "@types/lodash": "^4.14.108",
-    "sass-loader": "^7.0.1",
-    "node-sass": "^4.9.0",
     "awesome-typescript-loader": "^5.0.0",
     "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "v4.0.0-alpha.0",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.21.0",
     "tslint": "^5.9.1",
