--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,9 @@
         "sourceMap": true,
         "noImplicitAny": true,
         "module": "commonjs",
-        "target": "es6",
-        "jsx": "react"
+        "lib": ["es2015", "dom"],
+        "target": "es5",
+        "jsx": "react",
     },
     "include": [
         "./src/**/*"
