--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "webpack",
     "watch": "webpack --watch",
+    "test": "rimraf ./test_build/ && tsc -p tsconfig-test.json && alsatian \"./test_build/test/**/*.test.js\"",
     "lint": "tslint -c tslint.json 'src/**/*.ts'"
   },
   "repository": {
@@ -30,6 +31,7 @@
     "@types/node": "^9.6.9",
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
+    "alsatian": "^2.2.1",
     "awesome-typescript-loader": "^5.0.0",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "v4.0.0-alpha.0",
