--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Typescript, React, Webpack, Express App from scratch",
   "main": "server.js",
   "scripts": {
-    "build": "npm run build-webpack && node ./dist/server.js",
+    "build": "npm run webpack && node ./dist/server.js",
     "nodemon": "nodemon ./dist/server.js",
     "watch": "webpack --watch",
-    "build-webpack": "webpack",
+    "webpack": "webpack",
     "clean": "rimraf ./node_modules/",
     "test": "rimraf ./test_build/ && tsc -p tsconfig-test.json && alsatian \"./test_build/test/**/*.test.js\"",
     "test-test": "alsatian \"./test_build/test/**/*.test.js\"",
@@ -38,8 +38,10 @@
     "@types/react-dom": "^16.0.5",
     "alsatian": "^2.2.1",
     "awesome-typescript-loader": "^5.0.0",
+    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "v4.0.0-alpha.0",
+    "html-webpack-plugin": "^3.2.0",
     "mock-fetch-api": "^1.0.7",
     "node-sass": "^4.9.0",
     "nodemon": "^1.17.4",
