--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "Typescript, React, Webpack, Express App from scratch",
   "main": "server.js",
   "scripts": {
-    "build": "npm run webpack && node ./dist/server.js",
+    "build": "webpack",
     "nodemon": "nodemon ./dist/server.js",
     "watch": "webpack --watch",
-    "webpack": "webpack",
     "clean": "rimraf ./node_modules/",
     "test": "rimraf ./test_build/ && tsc -p tsconfig-test.json && alsatian \"./test_build/test/**/*.test.js\"",
     "test-test": "alsatian \"./test_build/test/**/*.test.js\"",
