--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "style-loader": "^0.21.0",
     "tslint": "^5.9.1",
     "typescript": "^2.8.3",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.1.2"
   }
