--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   },
   "homepage": "https://github.com/alanmynah/react-typescript#readme",
   "dependencies": {
+    "@types/azure": "^0.9.19",
     "@types/express": "^4.11.1",
+    "azure-storage": "^2.8.3",
     "express": "^4.16.3",
     "lodash": "^4.17.10",
     "react": "^16.3.2",
@@ -31,14 +33,15 @@
     "semantic-ui-react": "^0.78.3"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.108",
-    "@types/node": "^9.6.9",
+    "@types/lodash": "^4.14.109",
+    "@types/node": "^10.3.0",
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
     "alsatian": "^2.2.1",
     "awesome-typescript-loader": "^5.0.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
+    "dotenv": "^6.0.0",
     "extract-text-webpack-plugin": "v4.0.0-alpha.0",
     "html-webpack-plugin": "^3.2.0",
     "mock-fetch-api": "^1.0.7",
@@ -49,9 +52,10 @@
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.21.0",
     "tslint": "^5.9.1",
-    "typescript": "^2.8.3",
+    "typescript": "^2.9.1",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.6.0",
-    "webpack-cli": "^2.1.2"
+    "webpack-cli": "^2.1.2",
+    "yargs": "^11.0.0"
   }
 }
