--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Typescript, React, Webpack, Express App from scratch",
   "main": "server.js",
   "scripts": {
+    "build:typescript": "tsc",
     "build": "webpack",
     "nodemon": "nodemon ./dist/server.js",
     "watch": "webpack --watch",
@@ -25,6 +26,7 @@
   "dependencies": {
     "@types/azure": "^0.9.19",
     "@types/express": "^4.11.1",
+    "@types/yargs": "^11.0.0",
     "azure-storage": "^2.8.3",
     "express": "^4.16.3",
     "lodash": "^4.17.10",
@@ -52,7 +54,7 @@
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.21.0",
     "tslint": "^5.9.1",
-    "typescript": "^2.9.1",
+    "typescript": "2.8.4",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.1.2",
