--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/express": "^4.11.1",
     "@types/yargs": "^11.0.0",
     "azure-storage": "^2.8.3",
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "lodash": "^4.17.10",
     "react": "^16.3.2",
