--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@types/azure": "^0.9.19",
     "@types/express": "^4.11.1",
+    "@types/uuid": "^3.4.3",
     "@types/yargs": "^11.0.0",
     "azure-storage": "^2.8.3",
     "body-parser": "^1.18.3",
@@ -34,7 +35,8 @@
     "lodash": "^4.17.10",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "semantic-ui-react": "^0.78.3"
+    "semantic-ui-react": "^0.78.3",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.109",
