--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/express": "^4.11.1",
     "@types/uuid": "^3.4.3",
     "@types/yargs": "^11.0.0",
+    "axios": "^0.18.0",
     "azure-storage": "^2.8.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
