api photo works

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "homepage": "https://github.com/alanmynah/react-typescript#readme",
   "dependencies": {
     "@types/azure": "^0.9.19",
-    "@types/express": "^4.11.1",
+    "@types/express": "^4.16.0",
     "@types/uuid": "^3.4.3",
     "@types/yargs": "^11.0.0",
     "axios": "^0.18.0",
@@ -37,15 +37,15 @@
     "lodash": "^4.17.10",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "semantic-ui-react": "^0.78.3",
+    "semantic-ui-react": "^0.81.1",
     "ts-node": "^6.1.0",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.109",
-    "@types/node": "^10.3.0",
+    "@types/node": "^10.3.1",
     "@types/react": "^16.3.13",
-    "@types/react-dom": "^16.0.5",
+    "@types/react-dom": "^16.0.6",
     "alsatian": "^2.2.1",
     "awesome-typescript-loader": "^5.0.0",
     "clean-webpack-plugin": "^0.1.19",
@@ -56,13 +56,13 @@
     "neworbit-tslint-config": "^2.0.1",
     "node-sass": "^4.9.0",
     "nodemon": "^1.17.4",
-    "sass-loader": "^7.0.1",
+    "sass-loader": "^7.0.3",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.21.0",
     "tslint": "^5.9.1",
-    "typescript": "2.8.4",
+    "typescript": "^2.9.1",
     "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack": "^4.6.0",
+    "webpack": "^4.11.1",
     "webpack-cli": "^2.1.2",
     "webpack-merge": "^4.1.2"
   }
