--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "lodash": "^4.17.10",
+    "npm": "^6.1.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "semantic-ui-react": "^0.81.1",
