--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/express": "^4.16.0",
     "@types/react-router": "^4.0.26",
     "@types/react-router-dom": "^4.2.7",
+    "@types/request": "^2.47.0",
     "@types/uuid": "^3.4.3",
     "@types/yargs": "^11.0.0",
     "axios": "^0.18.0",
@@ -42,6 +43,7 @@
     "react-dom": "^16.3.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "request": "^2.87.0",
     "semantic-ui-react": "^0.81.1",
     "ts-node": "^6.1.0",
     "uuid": "^3.2.1"
