--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/alanmynah/react-typescript#readme",
   "dependencies": {
     "@types/azure": "^0.9.19",
+    "@types/dotenv": "^4.0.3",
     "@types/express": "^4.16.0",
     "@types/react-router": "^4.0.26",
     "@types/react-router-dom": "^4.2.7",
@@ -36,6 +37,7 @@
     "axios": "^0.18.0",
     "azure-storage": "^2.8.3",
     "body-parser": "^1.18.3",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "lodash": "^4.17.10",
     "npm": "^6.1.0",
