clean up package

--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "build:typescript": "tsc",
     "build": "webpack --config webpack.dev.js",
     "build:production": "webpack --config webpack.prod.js",
-    "dev": "ts-node --inspect=5858 ./src/server/server.ts",
-    "nodemon": "nodemon --inspect ./dist/server.js",
-    "watch": "webpack --config webpack.dev.js --watch",
+    "nodemon": "nodemon ./dist/server.js",
+    "watch": "webpack webpack.dev.js --watch",
     "clean": "rimraf ./node_modules/",
     "test": "rimraf ./test_build/ && tsc -p tsconfig-test.json && alsatian \"./test_build/test/**/*.test.js\"",
     "test-test": "alsatian \"./test_build/test/**/*.test.js\"",
@@ -26,14 +25,6 @@
   },
   "homepage": "https://github.com/alanmynah/react-typescript#readme",
   "dependencies": {
-    "@types/azure": "^0.9.19",
-    "@types/dotenv": "^4.0.3",
-    "@types/express": "^4.16.0",
-    "@types/react-router": "^4.0.26",
-    "@types/react-router-dom": "^4.2.7",
-    "@types/request": "^2.47.0",
-    "@types/uuid": "^3.4.3",
-    "@types/yargs": "^11.0.0",
     "axios": "^0.18.0",
     "azure-storage": "^2.8.3",
     "body-parser": "^1.18.3",
@@ -47,10 +38,16 @@
     "react-router-dom": "^4.3.1",
     "request": "^2.87.0",
     "semantic-ui-react": "^0.81.1",
-    "ts-node": "^6.1.0",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
+    "@types/azure": "^0.9.19",
+    "@types/dotenv": "^4.0.3",
+    "@types/express": "^4.16.0",
+    "@types/react-router": "^4.0.26",
+    "@types/react-router-dom": "^4.2.7",
+    "@types/request": "^2.47.0",
+    "@types/uuid": "^3.4.3",
     "@types/lodash": "^4.14.109",
     "@types/node": "^10.3.1",
     "@types/react": "^16.3.13",
