--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack --config webpack.dev.js",
     "build:production": "webpack --config webpack.prod.js",
     "nodemon": "nodemon ./dist/server.js",
-    "watch": "webpack webpack.dev.js --watch",
+    "watch": "webpack --config webpack.dev.js --watch",
     "clean": "rimraf ./node_modules/",
     "test": "rimraf ./test_build/ && tsc -p tsconfig-test.json && alsatian \"./test_build/test/**/*.test.js\"",
     "test-test": "alsatian \"./test_build/test/**/*.test.js\"",
