--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.21.0",
     "tslint": "^5.9.1",
-    "typescript": "^2.9.1",
+    "typescript": "2.9.1",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.11.1",
     "webpack-cli": "^2.1.2",
